--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,8 @@
 name: flutterappversion
 description: read and write versionName and versionCode
-publish_to: "none"
-version: 1.0.0
-
-environment:
-  sdk: '>=2.8.1 <3.0.0'
-
-dependencies:
+publish_to: none
+version: 1.3.0+999
+environment: 
+  sdk: '>=2.12.0 <3.0.0'
+dependencies: 
   yaml_modify: ^1.0.1
